--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Babel==2.6.0
 certifi==2018.11.29
 chardet==3.0.4
 defusedxml==0.5.0
-Django==2.1.4
+Django
 django-allauth==0.38.0
 django-filter==2.0.0
 django-phonenumber-field==2.1.0
